--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ ArtOfRally/.vsconfig
 /ArtOfRally/Content/Assets/Vefects
 /ArtOfRally/Content/Assets/RocketThrusterExhaustFX
 /ArtOfRally/Content/Assets/Realistic_Starter_VFX_Pack_Vol2
+/ArtOfRally/Content/StylizedGrassByMayu
